made changes to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <h1>This is my lovely website</h1>
 <p>Hope you like it </p>
 <p>HIiii</p>
+<p>Fwature B work</p>
 <p> Feature</p>
 <p> :) X) :D XD</p>
 
