--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
 <html>
-<title>This is my website<title>
-<h1>This is my lovely website</h1>
-<p>Hope you like it </p>
-<p>HIiii</p>
-<p> Feature B added</p>
-<p>Fwature B work</p>
-<p> Feature</p>
-<p> :) X) :D XD</p>
-
+<h1> Changes</h1>
 </html>
